force-app/main/default/objects/Payment_Detail__c/Payment_Detail__c.object-meta.xml
<CustomObject>
    <description>The Payment Detail object captures available payment options for a person account. It records the preferred payment method — Cash, Pay Id, or Bank Transfer — and links to the parent Account via a master-detail relationship. Commonly used for rent collection setup and payment preference management.</description>
    <label>Payment Detail</label>
    <nameField>
        <displayFormat>PD-{0000}</displayFormat>
        <label>Payment Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>