force-app/main/default/objects/Payment_Detail__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Links this payment detail record to its parent person account via a master-detail relationship.</description>
    <inlineHelpText>The person account that owns this payment detail record.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Details</relationshipLabel>
    <relationshipName>Payment_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>