force-app/main/default/objects/Payment_Detail__c/fields/Payment_Information__c.field-meta.xml
<CustomField>
    <fullName>Payment_Information__c</fullName>
    <description>Information about the payment.</description>
    <label>Payment Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>