force-app/main/default/objects/Payment_Detail__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <description>Specifies the payment method available or preferred for this payment detail record — cash in person, PayID transfer, or direct bank transfer.</description>
    <inlineHelpText>Select how rent payments will be made. Cash for in-person payments, Pay Id for instant bank transfers using a registered ID, or Bank Transfer for direct account-to-account payments.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Pay Id</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>